--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 .car {
   width: 50px;
   height: 100px;
-  background-image: url('../image/player.png');
+  background-image: url('../image/newcar.png');
   background-repeat: no-repeat;
   background-size: cover;
+  transform: rotate(180deg);
 }
