--- a/style.css
+++ b/style.css
@@ -52,8 +52,6 @@ table {
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
-  left: 125px;
-  bottom: 10px;
 }
 
 .gameArea {
@@ -71,4 +69,44 @@ table {
   height: 50px;
   background-color: #fff;
   left: 145px;
+}
+
+.start {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  margin: 0;
+  padding: 2rem 0;
+  text-align: center;
+  z-index: 100;
+  color: #fff;
+  font-size: 1.5rem;
+  font-family: sans-serif;
+  font-weight: 700;
+  background-color: #000;
+  cursor: pointer;
+}
+
+.score {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #000;
+  padding: 1rem 0;
+  z-index: 100;
+  font-size: 1.5rem;
+  font-family: sans-serif;
+  font-weight: 500;
+  background-color: #000;
+  color: skyblue;
+  text-align: center;
+}
+
+.game {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
